--- a/QuickBuy.Web/config.json
+++ b/QuickBuy.Web/config.json
@@ -1,7 +1,14 @@
 {
   "ConnectionStrings": {
-    "QuickBuyDB": "server=localhost;uid=root;pwd=12345;database=QuickBuyDB",
+    "QuickBuyDB": "server=den1.mysql5.gear.host;uid=quickbuydb;pwd=Il6p21?~5olK;database=quickbuydb",
+    "QuickBuyLocalDB": "server=localhost;uid=root;pwd=12345;database=QuickBuyDB",
     "QuickBuyDBMSSQL": "Server=(localdb)\\mssqllocaldb;Database=QuickBuyDB;Trusted_Connection=True"
+  },
+  "Smtp": {
+    "Server": "smtp.gmail.com",
+    "Port": "587",
+    "FromAddress": "edsonlimadev@gmail.com",
+    "Password": "D3v#El@2019"
   }
 }
 
