--- a/QuickBuy.Web/QuickBuy.Web.csproj
+++ b/QuickBuy.Web/QuickBuy.Web.csproj
@@ -38,6 +38,7 @@
     <None Remove="ClientApp\src\app\loja\carrinho-compra\loja.carrinho.compra.ts" />
     <None Remove="ClientApp\src\app\loja\efetivar\loja.compra.realizada.component.ts" />
     <None Remove="ClientApp\src\app\loja\efetivar\loja.efetivar.component.ts" />
+    <None Remove="ClientApp\src\app\loja\pedidos\loja.pedidos.component.ts" />
     <None Remove="ClientApp\src\app\loja\pesquisa\loja.pesquisa.component.ts" />
     <None Remove="ClientApp\src\app\loja\produto\loja.produto.component.ts" />
     <None Remove="ClientApp\src\app\modelo\itemPedido.ts" />
@@ -69,6 +70,7 @@
     <TypeScriptCompile Include="ClientApp\src\app\loja\carrinho-compra\loja.carrinho.compra.ts" />
     <TypeScriptCompile Include="ClientApp\src\app\loja\efetivar\loja.compra.realizada.component.ts" />
     <TypeScriptCompile Include="ClientApp\src\app\loja\efetivar\loja.efetivar.component.ts" />
+    <TypeScriptCompile Include="ClientApp\src\app\loja\pedidos\loja.pedidos.component.ts" />
     <TypeScriptCompile Include="ClientApp\src\app\loja\pesquisa\loja.pesquisa.component.ts" />
     <TypeScriptCompile Include="ClientApp\src\app\loja\produto\loja.produto.component.ts" />
     <TypeScriptCompile Include="ClientApp\src\app\modelo\itemPedido.ts" />
